# alfa-accounting

./: file_analysis.py  main.py  pyproject.toml
accounting/: main.py
